tests/miniJava/neg/000160_mutation.MiniJava
class java { public static false Main ( String [ ] java ) { { } } }
